--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   word-break: break-word;
+  
 }
 
 .none{
@@ -19,7 +20,9 @@ padding: 15px;
 
 width: auto;
 height: auto;
-margin: 15px;
+margin-left: 15px;
+margin-bottom: 10px;
+margin-right: 15px;
 
 background: #FFFFFF;
 border-radius: 5px;
